fix footer spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2664,9 +2664,8 @@ input, select, textarea {
 
 		ul.contact li {
 			text-decoration: none;
-			margin: 2.5em 0 0 0;
-			padding: 0 0 0 1em;
-			/* padding: 0 0 0 3.25em; */
+			margin: 1em 0 0 0;
+			padding: 0 0 0 3.25em;
 			position: relative;
 		}
 
